--- a/client/src/app/views/genes/genes-detail/genes-detail.component.less
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.less
@@ -24,22 +24,37 @@ nz-page-header-title.flagged {
 .ant-page-header-content {
   padding-top: 0;
 }
-.ant-menu-horizontal {
-  // background: #efefef;
+
+#page-header-menu-row {
   margin-left: -@default-padding-md;
   margin-right: -@default-padding-md;
   margin-top: 0;
   margin-bottom: @default-padding-sm;
-  line-height: 24px;
-  .anticon {
-    margin-right: 0; // TODO figure out why this is needed, example doesn't have a margin
+  .ant-menu-horizontal {
+    // background: #efefef;
+    line-height: 24px;
+    .anticon {
+      margin-right: 0; // TODO figure out why this is needed, example doesn't have a margin
+    }
+  }
+  #contributor-groups {
+    text-align: right;
+    padding-right: @default-padding-md;
+    border-bottom: 1px solid @border-color-split;
+    .role-group-label {
+      margin-right: -.5em;
+    }
+    .role-group {
+      margin-left: @default-padding-sm;
+      display: inline-block;
+      .avatar {
+        display: inline-block;
+        margin-left: 2px;
+      }
+    }
   }
 }
 
-#contributors {
-  display: inline-block;
-  border: 1px solid green;
-}
 
 .revision-list {
   .revision-description-diff {
