--- a/client/src/app/views/drugs/drugs-summary/drugs-summary.component.html
+++ b/client/src/app/views/drugs/drugs-summary/drugs-summary.component.html
@@ -1,3 +1,8 @@
-<h2>Drug detail summary</h2>
-
-<p>Tables of entities associated with the selected drug.</p>
+<nz-space nzSize="middle" *ngIf="drugId" nzDirection="vertical" class="space-align-block">
+  <nz-space-item>
+    <cvc-assertions-browse [drugId]="drugId"></cvc-assertions-browse>
+  </nz-space-item>
+  <nz-space-item>
+    <cvc-evidence-browse [drugId]="drugId"></cvc-evidence-browse>
+  </nz-space-item>
+</nz-space>
