--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -129,7 +129,7 @@
             </ul>
           </nz-col>
           <nz-col nzSpan="12" id="contributor-groups">
-            <cvc-contributor-avatars></cvc-contributor-avatars>
+            <cvc-contributor-avatars [subscribable]="subscribable"></cvc-contributor-avatars>
           </nz-col>
         </nz-row>
         <!-- <cvc-lifecycle-actions></cvc-lifecycle-actions> -->
