--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -1,10 +1,14 @@
 <ng-container *ngIf="gene$ | async as gene">
+  <!-- breadcrumb -->
   <nz-breadcrumb [nzAutoGenerate]="true"
-    [nzRouteLabelFn]="getRouteLabel"
-    nz-page-header-breadcrumb> </nz-breadcrumb>
+    [nzRouteLabelFn]="getRouteLabel"></nz-breadcrumb>
+
   <div cvcFlaggable
-    [flags]="flagsTotal$ | async">
+    [flags]="flagsTotal$ | ngrxPush">
+
     <nz-page-header class="site-page-header">
+
+      <!-- title -->
       <nz-page-header-title cvcFlaggableOptions
         [ngClass]="{ 'flagged': gene.flags.totalCount > 0 }">
         <i nz-icon
@@ -13,12 +17,15 @@
           {{ gene.name }}
         </span>
       </nz-page-header-title>
+
+      <!-- subtitle -->
       <nz-page-header-subtitle>
         {{ gene.officialName }}
       </nz-page-header-subtitle>
+
       <nz-page-header-tags>
         <nz-tag [nzColor]="'red'"
-          *ngIf="false">Flagged</nz-tag>
+          *ngIf="true">Flagged</nz-tag>
       </nz-page-header-tags>
 
       <!-- header action btns, actions menu -->
@@ -80,59 +87,6 @@
       </nz-page-header-extra>
 
       <nz-page-header-content>
-        <nz-row id="page-header-menu-row">
-          <nz-col nzSpan="12">
-            <ul nz-menu
-              nzMode="horizontal">
-              <li nz-menu-item
-                nzMatchRouter>
-                <i nz-icon
-                  nzType="civic-gene"></i>
-                <a routerLink="summary">
-                  Summary
-                </a>
-              </li>
-              <li nz-menu-item
-                nzMatchRouter>
-                <i nz-icon
-                  nzType="civic-comment"></i>
-                <a routerLink="comments">
-                  Comments
-                  <nz-badge *ngIf="gene.comments.totalCount > 0"
-                    [nzCount]="gene.comments.totalCount"
-                    [nzStyle]="{ backgroundColor: '#A0D8F5'}"
-                    nzStandalone></nz-badge>
-                </a>
-              </li>
-              <li nz-menu-item
-                nzMatchRouter>
-                <i nz-icon
-                  nzType="civic-revision"></i>
-                <a routerLink="revisions">
-                  Revisions
-                  <span *ngIf="gene.revisions.totalCount > 0"
-                    nz-typography nzType="secondary">({{ gene.revisions.totalCount }})</span>
-                </a>
-              </li>
-              <li nz-menu-item
-                nzMatchRouter>
-                <i nz-icon
-                  nzType="civic-flag"></i>
-                <a routerLink="flags">
-                  Flags
-                  <nz-badge *ngIf="gene.flags.totalCount > 0"
-                    [nzCount]="gene.flags.totalCount"
-                    [nzStyle]="{ backgroundColor: '#E297A0'}"
-                    nzStandalone></nz-badge>
-                </a>
-              </li>
-            </ul>
-          </nz-col>
-          <nz-col nzSpan="12" id="contributor-groups">
-            <cvc-contributor-avatars [subscribable]="subscribable"></cvc-contributor-avatars>
-          </nz-col>
-        </nz-row>
-        <!-- <cvc-lifecycle-actions></cvc-lifecycle-actions> -->
         <div class="content">
           <router-outlet></router-outlet>
         </div>
