--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -1,8 +1,7 @@
 <ng-container *ngIf="gene$ | async as gene">
-  <!-- breadcrumb -->
-  <nz-breadcrumb [nzAutoGenerate]="true"
-    [nzRouteLabelFn]="getRouteLabel"></nz-breadcrumb>
-
+  <cvc-section-navigation
+    [entity]="{ id: gene.id, type: 'gene', displayName: gene.name }">
+  </cvc-section-navigation>
   <div cvcFlaggable
     [flags]="flagsTotal$ | ngrxPush">
 
