--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="gene$ | async as gene">
   <cvc-section-navigation
-    [entity]="{ id: gene.id, type: 'gene', displayName: gene.name }">
+    [entity]="{ id: gene.id, displayName: gene.name }">
   </cvc-section-navigation>
   <div cvcFlaggable
     [flags]="flagsTotal$ | ngrxPush">
