--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -95,6 +95,8 @@
                 <!-- tab label, link -->
                 <a *nzTabLink
                   nz-tab-link routerLink="summary">
+                  <i nz-icon
+                    nzType="civic-gene"></i>
                   Summary
                 </a>
 
@@ -105,6 +107,8 @@
                 <!-- label, link -->
                 <a *nzTabLink
                   nz-tab-link routerLink="comments">
+                  <i nz-icon
+                    nzType="civic-comment"></i>
                   Comments
                 </a>
 
@@ -114,8 +118,9 @@
               <nz-tab>
                 <!-- tab label, link -->
                 <a *nzTabLink
-                  nz-tab-link routerLink="revisions"
-                  queryParamsHandling="merge">
+                  nz-tab-link routerLink="revisions">
+                  <i nz-icon
+                    nzType="civic-revision"></i>
                   Revisions
                 </a>
               </nz-tab>
@@ -125,6 +130,8 @@
                 <!-- tab label, link -->
                 <a *nzTabLink
                   nz-tab-link routerLink="flags">
+                  <i nz-icon
+                    nzType="civic-flag"></i>
                   Flags
                 </a>
               </nz-tab>
