--- a/client/src/app/components/shared/drug-tag/drug-tag.component.html
+++ b/client/src/app/components/shared/drug-tag/drug-tag.component.html
@@ -1,4 +1,4 @@
-<nz-tag nzColor="purple">
-  <i nz-icon nzType="civic-intervention"></i>
+<nz-tag>
+  <i nz-icon nzType="civic-intervention" nzTheme="twotone" nzTwotoneColor="#AC3996"></i>
   {{ drug.name }}
 </nz-tag>
