--- a/client/src/app/components/shared/gene-tag/gene-tag.component.html
+++ b/client/src/app/components/shared/gene-tag/gene-tag.component.html
@@ -5,19 +5,29 @@
 </ng-container>
 
 <ng-template #tag>
-  <nz-tag
+  <nz-tag *ngIf="enablePopover; else noPopover" 
     nz-popover
     [nzPopoverMouseEnterDelay]="0.5"
     [nzPopoverContent]="genePopover"
     nzPopoverTrigger="hover">
-    <i nz-icon
-      nzType="civic-gene" nzTheme="twotone" nzTwotoneColor="#07AFF0"></i> {{ gene.name }}
+    <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
   <ng-template #genePopover>
     <cvc-gene-popover [geneId]="gene.id"></cvc-gene-popover>
   </ng-template>
 </ng-template>
 
+<ng-template #noPopover>
+  <nz-tag>
+    <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
+  </nz-tag>
+</ng-template>
+
 <ng-template #unlinked>
   <ng-template [ngTemplateOutlet]="tag"></ng-template>
+</ng-template>
+
+<ng-template #tagContent>
+  <i nz-icon
+  nzType="civic-gene" nzTheme="twotone" nzTwotoneColor="#07AFF0"></i> {{ gene.name }}
 </ng-template>
