--- a/client/src/app/views/drugs/drugs-browse/drugs-browse.component.html
+++ b/client/src/app/views/drugs/drugs-browse/drugs-browse.component.html
@@ -45,9 +45,7 @@
                   <cvc-drug-tag [drug]="d"></cvc-drug-tag>
                 </td>
                 <td>
-                  <a *ngIf="d.ncitId; else noNcit" href="https://ncit.nci.nih.gov/ncitbrowser/ConceptReport.jsp?dictionary=NCI_Thesaurus&ns=ncit&code={{d.ncitId}}" target="_blank">
-                    {{ d.ncitId}}
-                  </a>
+                  <cvc-link-tag *ngIf="d.ncitId; else noNcit" [link]="{url: d.drugUrl, label: d.ncitId, tooltip: 'View in the NCIthesaurus'}"></cvc-link-tag>
                   <ng-template #noNcit>--</ng-template>
                 </td>
                 <td>
